--- a/README.Rmd
+++ b/README.Rmd
@@ -3,7 +3,7 @@
 This is the development branch of SCnorm currently on version v0.99.5.
 This version does not require R version >= 3.4 and uses parallel instead of BiocParallel.
 
-Details of SCnorm may be found in the vignette located here: [SCnorm Vignette](https://www.biostat.wisc.edu/~kendzior/SCNORM/SCnorm.pdf)
+Details of SCnorm may be found in the vignette located here: [SCnorm Vignette](https://www.biostat.wisc.edu/~kendzior/SCNORM/SCnorm_vignette.pdf)
 
 ## Installation
 
