--- a/README.Rmd
+++ b/README.Rmd
@@ -1,6 +1,6 @@
 # SCnorm: robust normalization of single-cell RNA-seq data
 
-SCnorm is an R package which can be used to normalize single-cell RNA-seq data. 
+SCnorm is an R package which can be used to normalize single-cell RNA-seq data. Version 0.99.7 of SCnorm is now accepted to Bioconductor and instructions for download may be found at [https://bioconductor.org/packages/devel/bioc/html/SCnorm.html](https://bioconductor.org/packages/devel/bioc/html/SCnorm.html).
 
 Details of SCnorm may be found in the vignette: [SCnorm Vignette](https://www.biostat.wisc.edu/~kendzior/SCNORM/SCnorm_vignette.pdf)
 
@@ -29,8 +29,8 @@ Kendziorski C. SCnorm: robust normalization of single-cell
 RNA-seq data. Nature Methods. 2017 Jun 1;14(6):584-6.
 [https://www.nature.com/nmeth/journal/v14/n6/full/nmeth.4263.html](https://www.nature.com/nmeth/journal/v14/n6/full/nmeth.4263.html)
 
-## Latest Update: v0.99.5
-SCnorm has been updated for Bioconductor submission, along with other updates and more details for usage -- please see vignette for complete updates. 
+## Latest Update: v0.99.7
+SCnorm has been accepted for Bioconductor submission -- please see vignette for complete updates and updated function usage. 
 
 
 
