--- a/README.Rmd
+++ b/README.Rmd
@@ -2,18 +2,31 @@
 
 SCnorm is an R package which can be used to normalize single-cell RNA-seq data. Version 0.99.7 of SCnorm is now accepted to Bioconductor and instructions for download may be found at [https://bioconductor.org/packages/devel/bioc/html/SCnorm.html](https://bioconductor.org/packages/devel/bioc/html/SCnorm.html).
 
-Details of SCnorm may be found in the vignette: [SCnorm Vignette](https://www.biostat.wisc.edu/~kendzior/SCNORM/SCnorm_vignette.pdf)
+#### Can you use SCnorm on your 10X (or very sparse) dataset?
+
+SCnorm is not intended for datasets with more than ~80% zero counts, often K will not converge in these situations. 
+Setting the FilterExpression parameter to 1 or 2 may help, but is not a guarantee. 
+It may also be helpful to use the ditherCounts = TRUE parameter for sparse UMI based data which may contain numerous tied counts (counts of 1 and 2 for example).
+
+Additional details and a FAQ for SCnorm are described in the vignette: [SCnorm Vignette](https://www.biostat.wisc.edu/~kendzior/SCNORM/SCnorm_vignette.pdf)
 
 ## Installation
 
-Make sure to use the latest version of SCnorm by installing it from GitHub:
+Make sure to use the latest version of SCnorm by installing it from BioConductor or GitHub. You will need to use the development version of Bioconductor to install.
+
+```R
+source("https://bioconductor.org/biocLite.R")
+useDevel() # To use development version
+biocLite("SCnorm")
+```
+or
 
 ```R
 library(devtools)
 devtools::install_github("rhondabacher/SCnorm")
 ```
 To access a version of SCnorm that does not require R version >= 3.4 you can 
-download the SCnorm from the development branch here: 
+download SCnorm from the development branch here: 
 [develop branch](https://github.com/rhondabacher/SCnorm/tree/devel)
 
 
