--- a/vignettes/SCnorm.Rnw
+++ b/vignettes/SCnorm.Rnw
@@ -51,9 +51,10 @@ Before analysis can proceed, the SCnorm package must be installed.
 
 The easiest way to install SCnorm is through Bioconductor(https://bioconductor.org/packages/devel/bioc/html/SCnorm.html):
 <<eval=FALSE, echo=TRUE>>=
-source("https://bioconductor.org/biocLite.R")
+if (!requireNamespace("BiocManager", quietly=TRUE))
+    install.packages("BiocManager")
 useDevel() # Need to use development version of Bioconductor
-biocLite("SCnorm")
+BiocManager::install("SCnorm")
 @
 
 There are two additional ways to download SCnorm.
